--- a/qrcode/popup.html
+++ b/qrcode/popup.html
@@ -15,6 +15,8 @@
  <script type="text/javascript" src="./lib/jquery.qrcode.js"></script>
  <script type="text/javascript" src="./lib/qrcode.js"></script>
  <div id="app">
+	<p>正常浏览器</p> 
+	<div id="qrcodeWeb"></div>
 	<p>百度地图壳浏览器</p> 
 	<div id="qrcodeMap"></div>
 	<p>百度地图LBC浏览器</p> 
